customerBuild/Common/Network/Spoke-NSG.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        
        "customerDesktopPrefix":{
            "type": "string"
        },
         "customerInfrastructurePrefix":{
            "type": "string"
        },
        "spokeNsgName":{
            "type": "string"
        },
        "hubUksDc01VmIp": {
            "type": "string"
        },
        "hubUksDc02VmIp": {
            "type": "string"
        },
        "hubMgmt01VmIp": {
            "type": "string"
        },
        "location": {
            "type": "string"
        },
       
        "tagCustomerName": {
            "type": "string"    
        },
        "tagCostCentreId": {
            "type": "string"
        },
         "tagSalesorderId":{
          "type": "string"
        },
         "hubLawName":{
        "type": "string"
      },
      "hubDsaId":{
        "type": "string"
      },
      "hubLawId":{
        "type": "string"
      },
      "loggingRetentionDays": {
        "type": "int"
      }
    },
    
    "variables": {},
    "resources": [
        {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-04-01",
      "name": "[parameters('spokeNsgName')]",
      "location": "[parameters('location')]",
      "tags": {
        "Owner": "Block Solutions",
        "Customer Name": "[parameters('tagCustomerName')]",
        "Department": "Workspace and Cloud",
        "Environment": "Production",
        "Location": "UK South",
        "Cost Centre": "[parameters('tagCostCentreId')]",
        "Sales Order ID": "[parameters('tagSalesOrderId')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Restrict-East-West-Desktop-Traffic-In",
            "properties": {
              "description": "Restrict East West Traffic Between Production Desktop Hosts",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "destinationAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Deny",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Restrict-East-West-Infra-Traffic-In",
            "properties": {
              "description": "Restrict East West Traffic Between Production Infrastructure Hosts",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "destinationAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "access": "Deny",
              "priority": 101,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-MgmtServer-to-Desktops-In",
            "properties": {
              "description": "Allow Hub management server access to customer desktops",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('hubMgmt01VmIp')]",
              "destinationAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "3389",
                "5986"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-MgmtServer-to-Infrastructure-In",
            "properties": {
              "description": "Allow Hub management server access to customer infrastructure servers\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('hubMgmt01VmIp')]",
              "destinationAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "access": "Allow",
              "priority": 111,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "3389",
                "5986"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-MgmtServer-to-Desktop-ICMP-In",
            "properties": {
              "description": "Allow Hub management server to ping customer desktops\n",
              "protocol": "ICMP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('hubMgmt01VmIp')]",
              "destinationAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 112,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-MgmtServer-to-Infrastructure-ICMP-In",
            "properties": {
              "description": "Allow Hub management server to ping customer infrastructure\n",
              "protocol": "ICMP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('hubMgmt01VmIp')]",
              "destinationAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "access": "Allow",
              "priority": 113,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Deny-Any",
            "properties": {
              "description": "Deny All undefined inbound traffic to customer spoke",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 1000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Restrict-East-West-Desktop-Traffic-Out",
            "properties": {
              "description": "Restrict East West Traffic Between Production Desktop Hosts\n",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "destinationAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Deny",
              "priority": 100,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Restrict-East-West-Infra-Traffic-Out",
            "properties": {
              "description": "Restrict East West Traffic Between Production Infrastructure Hosts\n",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "destinationAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "access": "Deny",
              "priority": 101,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-Desktop-to-ADDS-TCP-Out",
            "properties": {
              "description": "Allow customer desktop Services to access Domain Services in hub on TCP protocols\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "53",
                "88",
                "135",
                "139",
                "389",
                "445",
                "464",
                "636",
                "3268",
                "3269",
                "49152-65535"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "[parameters('hubUksDc01VmIp')]",
                "[parameters('hubUksDc02VmIp')]"

              ]
            }
          },
          {
            "name": "Allow-Desktop-to-ADDS-UDP-Out",
            "properties": {
              "description": "Allow customer desktop Services to access Domain Services in hub on UDP protocols\n",
              "protocol": "UDP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 111,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "53",
                "88",
                "123",
                "135",
                "389",
                "445",
                "464",
                "636"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "[parameters('hubUksDc01VmIp')]",
                "[parameters('hubUksDc02VmIp')]"
              ]
            }
          },
          {
            "name": "Allow-Desktop-to-ADDS-Ping-Out",
            "properties": {
              "description": "Allow customer desktop Services to  ping Domain Services in hub on ICMP protocols\n",
              "protocol": "ICMP",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 112,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "[parameters('hubUksDc01VmIp')]",
                "[parameters('hubUksDc02VmIp')]"
              ]
            }
          },
          {
            "name": "Allow-Infrastructure-to-ADDS-TCP-Out",
            "properties": {
              "description": "Allow customer Infrastructure Services to access Domain Services in hub on TCP protocols\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "access": "Allow",
              "priority": 113,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "53",
                "88",
                "135",
                "139",
                "389",
                "445",
                "464",
                "636",
                "3268",
                "3269",
                "49152-65535"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "[parameters('hubUksDc01VmIp')]",
                "[parameters('hubUksDc02VmIp')]"
              ]
            }
          },
          {
            "name": "Allow-Infrastructure-to-ADDS-UDP-Out",
            "properties": {
              "description": "Allow customer Infrastructure Services to access Domain Services in hub on UDP protocols\n",
              "protocol": "UDP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "access": "Allow",
              "priority": 114,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "53",
                "88",
                "123",
                "135",
                "389",
                "445",
                "464",
                "636"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "[parameters('hubUksDc01VmIp')]",
                "[parameters('hubUksDc02VmIp')]"
              ]
            }
          },
          {
            "name": "Allow-Infrastructure-to-ADDS-Ping-Out",
            "properties": {
              "description": "Allow customer Infrastructure Services to  ping Domain Services in hub on ICMP protocols\n",
              "protocol": "ICMP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "access": "Allow",
              "priority": 115,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
               "[parameters('hubUksDc01VmIp')]",
                "[parameters('hubUksDc02VmIp')]"
              ]
            }
          },
          {
            "name": "Allow-Desktop-to-EMIS1-TCP-Out",
            "properties": {
              "description": "Allow customer desktops to connect to EMIS1 Services on TCP protocols\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "80",
                "443",
                "8080",
                "33962",
                "33956",
                "33963",
                "33964",
                "33966",
                "33969",
                "33957"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "10.207.112.0/22",
                "10.207.116.0/22"
              ]
            }
          },
          {
            "name": "Allow-Desktop-to-EMIS2-TCP-Out",
            "properties": {
              "description": "Allow customer desktops to connect to EMIS2 Services on TCP protocols\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 121,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "80",
                "8080",
                "443"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "185.13.72.0/22",
                "149.11.42.48"
              ]
            }
          },
          {
            "name": "Allow-Desktop-to-SystmOne-TCP-Out",
            "properties": {
              "description": "Allow customer desktop to connect to SystmOne services on TCP Protocols\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "2130-2140",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 130,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "20.146.120.128/25",
                "20.146.248.128/25"
              ]
            }
          },
          {
            "name": "Allow-Desktop-to-SystmOne-UDP-Out",
            "properties": {
              "description": "Allow customer desktop to connect to SystmOne services on UDP Protocols\n",
              "protocol": "UDP",
              "sourcePortRange": "*",
              "destinationPortRange": "2120-2130",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "access": "Allow",
              "priority": 131,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "20.146.120.128/25",
                "20.146.248.0/25"
              ]
            }
          },
          {
            "name": "Allow-Desktop-to-AzureKMS-TCP-Out",
            "properties": {
              "description": "Allow access from customer desktop to Azure KMS services for product activation\n",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "1688",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 310,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-Infrastructure-to-AzureKMS-TCP-Out",
            "properties": {
              "description": "Allow access from customer infrastructure to Azure KMS services for product activation\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "1688",
              "sourceAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 311,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-Desktop-to-Web-TCP-Out",
            "properties": {
              "description": "Allow access from customer desktop to standard web services\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 312,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "80",
                "443",
                "8080"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-Infrastructure-to-Web-TCP-Out",
            "properties": {
              "description": "Allow access from customer Infrastructure to standard web services\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('customerInfrastructurePrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 313,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "80",
                "443",
                "8080"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-Desktop-to-UKSouth-Storage-Out",
            "properties": {
              "description": "Allow Desktops access to UK South Storage accounts\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "destinationAddressPrefix": "Storage.UKSouth",
              "access": "Allow",
              "priority": 400,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "Allow-Desktop-to-UKWest-Storage-Out",
            "properties": {
              "description": "Allow Desktops access to UK West Storage accounts\n",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "445",
              "sourceAddressPrefix": "[parameters('customerDesktopPrefix')]",
              "destinationAddressPrefix": "Storage.UKWest",
              "access": "Allow",
              "priority": 401,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    },
     {
      "type": "Microsoft.Network/networkSecurityGroups/providers/diagnosticSettings",
      "dependsOn": [
          "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('spokeNsgName'))]"
          
      ],
      "name": "[concat(parameters('spokeNsgName'), '/microsoft.insights/', parameters ('spokeNsgName'),'ds')]",
      "apiVersion": "2017-05-01-preview",
      "properties": {
        "name": "[parameters('hubLawName')]",
        "storageAccountId": "[parameters('hubDsaId')]",
        "workspaceId": "[parameters('hubLawId')]",
        "logs": [
          {
            "category": "NetworkSecurityGroupEvent",
            "enabled": true,
            "retentionPolicy": {
              "days": "[parameters('loggingRetentionDays')]",
              "enabled": true
            }
          },
          {
            "category": "NetworkSecurityGroupRuleCounter",
            "enabled": true,
            "retentionPolicy": {
              "days": "[parameters('loggingRetentionDays')]",
              "enabled": true
            }
          }
        ],
        "metrics": []
      }
     
    }
    ]
}
